# spdlog-module

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: .clangd  bundle.cmake  clang.cmake  cxx_module.cmake  fixup.cmake  generate_clangd.cmake
presets/: configure.json
spdlog_module/: CMakeLists.txt
spdlog_module/cmake/: spdlog_moduleConfig.cmake
spdlog_module/spdlog/: spdlog.h
spdlog_module/spdlog_module/: spdlog.h
spdlog_module/src/: spdlog.common.ixx  spdlog.ixx  spdlog.location.alias.ixx  spdlog.location.ixx  spdlog.location.logger.ixx  spdlog.logger.ixx  spdlog.util.ixx
spdlog_module_ext/: CMakeLists.txt
spdlog_module_ext/cmake/: spdlog_module_extConfig.cmake
spdlog_module_ext/src/: spdlog.ext.ixx  spdlog.location.alias.ixx  spdlog.location.ixx  spdlog.location.logger.ixx  spdlog.util.ixx
src/: main.cpp  spdlog.ixx  use_macro.cpp
